Changelog for HybridAuth.

0.8.2 pl
==============
- Added parameter "&redirectUri=``" for solve issue "redirect_uri_mismatch" when using multiple contexts.

0.8.1 pl
==============
- Fixed bug with saving parameters to $_SESSION.

0.8.0 pl
==============
- [#7] Fixed generation of links for sites in subfolder.
- [#4] Fixed login to separate contexts.
- Improved support of multiple contexts.

0.7.0 pl2
==============
- New snippet "haProfile" for update user profile.
- Automatic generation of links of providers.
- Improved chunks, added icons for some providers.
- Automatic logout of users that was been blocked by administrator.
- Added virtual field "gravatar" to class "haUser". You can get it with $modx->user->get('gravatar');.
- Extension package is removed from system settings when you uninstall component.
- Replaced file "action.php" to plugin "HybridAuth".
- Added new providers: "Draugiem" and "Xing".
- [#3] Fixed "No foreign key definition for parentClass: modUser using relation alias: Services" log entries.
- Fixed order of links to providers, specified in the parameter "&providers".

0.6.0 pl
==============
- Added ability to disable new user registrations. See system setting "ha.register_users".

0.5.0 beta
==============
- Fixed login trough vk.com
- Updated HybridAuth core to version 2.1.2

0.4.0 beta
==============
- Updated HybridAuth core to version 2.1.1
- Improved initialization of main class

0.3.3 beta
==============
- Fixed issue with empty email

0.3.2 beta
==============
- Added exception handler for catching all exceptions from HybridAuth into MODX system log

0.3.1 beta
==============
- Changing user class to haUser on login through remote service.
- On uninstall of component all haUsers becomes modUsers.

0.3.0 beta
==============
- Fixed save of a photo in profile.
- Improved errors handling.
- Fixed increment of username if remote username exists on site.